# HuffmanCoding_MPI_CUDA

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
CUDAMPI/: CMakeLists.txt  CUDAMPICompress.cu
CUDAMPINVSHMEM/: CMakeLists.txt  CUDAMPICompress.cu
MPI/: CMakeLists.txt
include/: GPUWrapper.cu  kernel.cu  parallelHeader.h
scripts/: cudampi.sh  cudampinvshmem.sh  generateFiles.py  mpi.sh  run.sh
